Revert "Add MavenOpts"
This reverts commit f1846b0